# sdxl-scripts

./: README.md  compile-clip.sh  compile-scheduled-unet.sh  compile-txt2img-tensile.sh  compile-txt2img.sh  compile-unet-winograd.sh  compile-vae.sh  run-clip.sh  run-txt2img-python.sh  run-unet.sh  run-vae.sh  source.sh
docker/: sdxl-gfx942-tensile.dockerfile  (+2 more)
tensile/: CMakeLists.txt  README.md  Utils.h  asm-new.sh  compile-scheduled-unet-tensile.sh  generate_kernel.py  hipblaslt.patch  main.cpp
tensile/output_128x1280x2048/: Cijk_Alik_Bljk_HSS_BH_Bias_AS_SAV_UserArgs_MT32xWtnU2SRJ074qkQ6v4wfrhiWlW1wonyPBt_w30NplSC4=.co  Cijk_Alik_Bljk_HSS_BH_Bias_AS_SAV_UserArgs_MT32xWtnU2SRJ074qkQ6v4wfrhiWlW1wonyPBt_w30NplSC4=.s  kernel229.txt  kernel_name.txt
tensile/output_2048x10240x1280/: Cijk_Alik_Bljk_HSS_BH_Bias_AS_SAV_UserArgs_MT160SWcHj39RZWaGl5Xh0vs_EWURGesfFaUBXLDnAuRfnT0=.co  Cijk_Alik_Bljk_HSS_BH_Bias_AS_SAV_UserArgs_MT160SWcHj39RZWaGl5Xh0vs_EWURGesfFaUBXLDnAuRfnT0=.s  kernel182.txt  kernel_name.txt
tensile/output_2048x1280x1280/: Cijk_Alik_Bljk_HSS_BH_Bias_AS_SAV_UserArgs_MT128LGssD3D5uUpJpwMOz9bV1KUetBSFPuVbIJbtPQNALVk=.co  Cijk_Alik_Bljk_HSS_BH_Bias_AS_SAV_UserArgs_MT128LGssD3D5uUpJpwMOz9bV1KUetBSFPuVbIJbtPQNALVk=.s  kernel127.txt  kernel_name.txt
tensile/output_2048x1280x5120/: Cijk_Alik_Bljk_HSS_BH_Bias_AS_SAV_UserArgs_MT128bFPK05_zis0qIfs3E8eqJSBctIsyWyTYbquBL6wLm-Y=.co  Cijk_Alik_Bljk_HSS_BH_Bias_AS_SAV_UserArgs_MT128bFPK05_zis0qIfs3E8eqJSBctIsyWyTYbquBL6wLm-Y=.s  kernel200.txt  kernel_name.txt
tensile/output_8192x5120x640/: kernel210.txt  kernel_name.txt  (+2 more)
(+10 files in other folders)
